change ex01 makefile

--- a/cpp01/ex00/Makefile
+++ b/cpp01/ex00/Makefile
@@ -2,13 +2,18 @@ NAME		=	BraiiiiiiinnnzzzZ
 CXX			=	g++
 CXXFLAG		= 	-Wall -Wextra -Werror
 VERSION		=	-std=c++98
-SRCS		=	main.cpp Zombie.cpp
+INCLUDE		=	-I includes
+SRCS		=	srcs/main.cpp srcs/Zombie.cpp
+VPATH		=	srcs
 OBJS		=	${SRCS:.cpp=.o}
 
 all:${NAME}
 
 ${NAME}: ${OBJS}
 	${CXX} ${CXXFLAGS} ${VERSION} ${OBJS} -o ${NAME}
+
+${OBJS}:
+	${CXX} ${CXXFLAGS} ${VERSION} ${INCLUDE} -c ${SRCS}
 
 clean:
 	rm -f ${OBJS}
