add cpp01 rules

--- a/cpp01/ex00/Makefile
+++ b/cpp01/ex00/Makefile
@@ -3,20 +3,22 @@ CXX			=	g++
 CXXFLAG		= 	-Wall -Wextra -Werror
 VERSION		=	-std=c++98
 INCLUDE		=	-I includes
-SRCS		=	srcs/main.cpp srcs/Zombie.cpp
-VPATH		=	srcs
-OBJS		=	${SRCS:.cpp=.o}
+SRCSDIR		=	srcs
+OBJSDIR		=	objs
+SRCS		=	$(shell find ${SRCSDIR} -name "*.cpp" -type f)
+OBJS		=	${subst ${SRCSDIR}, ./${OBJSDIR}, ${SRCS:.cpp=.o}}
 
 all:${NAME}
 
 ${NAME}: ${OBJS}
 	${CXX} ${CXXFLAGS} ${VERSION} ${OBJS} -o ${NAME}
 
-${OBJS}:
-	${CXX} ${CXXFLAGS} ${VERSION} ${INCLUDE} -c ${SRCS}
+${OBJSDIR}/%.o: ${SRCSDIR}/%.cpp
+	mkdir -p ${OBJSDIR}
+	$(CXX) $(CXXFLAGS) $(INCLUDE) -o $@ -c $<
 
 clean:
-	rm -f ${OBJS}
+	rm -rf ${OBJSDIR}
 
 fclean: clean
 	rm -f ${NAME}
