--- a/cpp00/ex00/Makefile
+++ b/cpp00/ex00/Makefile
@@ -2,18 +2,23 @@ NAME		=	megaphone
 CXX			=	g++
 CXXFLAGS	=	-Wall -Werror -Wextra
 VERSION		=	-std=c++98
-TESTVERSION	=	-std=c++17
-SRCS		=	megaphone.cpp
-OBJS		=	${SRCS:.cpp=.o}
+SRCS		=	${shell find ${SRCSDIR} -name "*.cpp" -type f}
+OBJS		=	${subst ${SRCSDIR}, ${OBJSDIR}, ${SRCS:.cpp=.o}}
+SRCSDIR		=	srcs
+OBJSDIR		=	objs
 
 all: ${NAME}
 ${NAME}: ${OBJS}
 	${CXX} ${CXXFLAGS} ${VERSION} -o ${NAME} ${OBJS}
 
+${OBJSDIR}/%.o: ${SRCSDIR}/%.cpp
+	@mkdir -p ${dir $@}
+	${CXX} ${CXXFLAGS} ${VERSION} -c $< -o $@
+
 clean:
-	rm  -f ${OBJS}
+	rm  -rf ${OBJSDIR}
 	
 fclean: clean
-	rm	-f ${NAME}
+	rm -f ${NAME}
 
 re:	fclean all
