--- a/cpp01/ex00/Makefile
+++ b/cpp01/ex00/Makefile
@@ -14,7 +14,7 @@ ${NAME}: ${OBJS}
 	${CXX} ${CXXFLAG} ${VERSION} ${OBJS} -o ${NAME}
 
 ${OBJSDIR}/%.o: ${SRCSDIR}/%.cpp
-	mkdir -p ${dir OBJSDIR}
+	mkdir -p ${dir ${OBJS}}
 	$(CXX) $(CXXFLAG) $(INCLUDE) -o $@ -c $<
 
 clean:
