--- a/cpp01/ex04/Makefile
+++ b/cpp01/ex04/Makefile
@@ -1,6 +1,6 @@
 NAME		=	SedForLosers
 CXX			=	g++
-CXXFLAGS	=	-Wall -Wextra -Werror
+CXXFLAGS	=	-Wall -Wextra -Werror -fsanitize=address
 VERSION		=	-std=c++98
 TESTVERSION	=	-std=c++17
 INCLUDE		=	-I ./includes/
