add Makefile VERSION

--- a/cpp01/ex04/Makefile
+++ b/cpp01/ex04/Makefile
@@ -14,7 +14,7 @@ ${NAME}: ${OBJS}
 
 ${OBJSDIR}/%.o: ${SRCSDIR}/%.cpp
 	mkdir -p ${dir $@}
-	$(CXX) $(CXXFLAGS) $(INCLUDE) -o $@ -c $< 
+	$(CXX) $(CXXFLAGS) $(INCLUDE) ${VERSION} -o $@ -c $< 
 
 clean:
 	rm -rf ${OBJSDIR}
