--- a/cpp01/ex01/Makefile
+++ b/cpp01/ex01/Makefile
@@ -15,7 +15,7 @@ ${NAME}: ${OBJS}
 
 ${OBJSDIR}/%.o: ${SRCSDIR}/%.cpp
 	mkdir -p ${OBJSDIR}
-	$(CXX) $(CXXFLAG) $(INCLUDE) -o $@ -c $<
+	$(CXX) $(CXXFLAG) $(INCLUDE) ${VERSION} -o $@ -c $<
 
 clean:
 	rm -rf ${OBJSDIR}
