--- a/cpp01/ex03/Makefile
+++ b/cpp01/ex03/Makefile
@@ -13,7 +13,7 @@ ${NAME}: ${OBJS}
 
 ${OBJSDIR}/%.o: ${SRCSDIR}/%.cpp
 	mkdir -p ${dir $@}
-	$(CXX) $(CXXFLAGS) $(INCLUDE) -o $@ -c $< 
+	$(CXX) $(CXXFLAGS) $(INCLUDE) ${VERSION} -o $@ -c $< 
 
 clean:
 	rm -rf ${OBJSDIR}
