--- a/ex02/Makefile
+++ b/ex02/Makefile
@@ -1,8 +1,7 @@
 NAME		=	Polymorphism2
-CXX			=	g++
-CXXFLAGS	=	-Wall -Wextra -Werror -fsanitize=address
+CXX			=	c++
+CXXFLAGS	=	-Wall -Wextra -Werror -fsanitize=leak
 VERSION		=	-std=c++98
-TESTVERSION	=	-std=c++17
 INCLUDE		=	-I ./includes/
 SRCS		=	${shell find ${SRCSDIR} -name "*.cpp"}
 SRCSDIR		=	srcs
