--- a/ex01/Makefile
+++ b/ex01/Makefile
@@ -1,5 +1,5 @@
 NAME		=	Serialization
-CXX			=	g++
+CXX			=	c++
 CXXFLAGS	=	-Wall -Werror -Wextra -fsanitize=address
 INCLUDES	=	-I ./includes
 VERSION		=	-std=c++98
