--- a/ex01/Makefile
+++ b/ex01/Makefile
@@ -2,8 +2,8 @@ NAME		=	Serialization
 CXX			=	c++
 CXXFLAGS	=	-Wall -Werror -Wextra -fsanitize=address
 INCLUDES	=	-I ./includes
-VERSION		=	-std=c++11
-SRCS		=	${shell find ${SRCSDIR} -name "*.cpp" -type f}
+VERSION		=	-std=c++98
+SRCS		=	${wildcard ${SRCSDIR}/*.cpp}
 OBJS		=	${subst ${SRCSDIR}, ${OBJSDIR}, ${SRCS:.cpp=.o}}
 SRCSDIR		=	srcs
 OBJSDIR		=	objs
