--- a/ex00/Makefile
+++ b/ex00/Makefile
@@ -1,9 +1,9 @@
 NAME		=	EasyFind
-CXX			=	g++
+CXX		=	c++
 CXXFLAGS	=	-Wall -Wextra -Werror -fsanitize=address
 VERSION		=	-std=c++98
 INCLUDE		=	-I ./includes/
-SRCS		=	${shell find ${SRCSDIR} -name "*.cpp" -type f}
+SRCS		=	${wildcard ${SRCSDIR}/*.cpp}
 SRCSDIR		=	srcs
 OBJSDIR		=	objs
 OBJS		=	${subst ${SRCSDIR}, ${OBJSDIR}, ${SRCS:.cpp=.o}}
@@ -22,4 +22,4 @@ fclean: clean
 	rm -rf ${NAME}
 re: fclean all
 
-.PHONY:	clean fclean re
+.PHONY:	clean fclean re all
