--- a/ex00/Makefile
+++ b/ex00/Makefile
@@ -1,8 +1,9 @@
 NAME		=	btc
-CXX			=	c++
-CXXFLAGS	=	-Wall -Wextra -Werror -fsanitize=address
+CXX		=	c++
+CXXFLAGS	=	-Wall -Wextra -Werror -fsanitize=address,undefined -pedantic-errors
+VERSION		=	-std=c++98
 INCLUDE		=	-I ./includes
-SRCS		=	${shell find ${SRCSDIR} -name "*.cpp" -type f}
+SRCS		=	${wildcard ${SRCSDIR}/*.cpp}
 SRCSDIR		=	srcs
 OBJSDIR		=	objs
 OBJS		=	${subst ${SRCSDIR}, ${OBJSDIR}, ${SRCS:.cpp=.o}}
@@ -13,7 +14,7 @@ ${NAME}: ${OBJS}
 
 ${OBJSDIR}/%.o: ${SRCSDIR}/%.cpp
 	mkdir -p ${dir ${OBJS}}
-	${CXX} ${INCLUDE} ${CXXFLAGS} -c $< -o $@
+	${CXX} ${INCLUDE} ${VERSION} ${CXXFLAGS} -c $< -o $@
 
 clean:
 	rm -rf ${OBJSDIR}
@@ -21,4 +22,4 @@ fclean: clean
 	rm -rf ${NAME}
 re: fclean all
 
-.PHONY:	clean fclean re
+.PHONY:	clean fclean re all
