--- a/ex01/Makefile
+++ b/ex01/Makefile
@@ -1,6 +1,6 @@
 NAME		=	Span
-CXX		=	c++
-CXXFLAGS	=	-Wall -Wextra -Werror -fsanitize=address
+CXX			=	c++
+CXXFLAGS	=	-Wall -Wextra -Werror -fsanitize=address,integer,undefined -pedantic-errors
 VERSION		=	-std=c++98
 INCLUDE		=	-I ./includes/
 SRCS		=	${wildcard ${SRCSDIR}/*.cpp}
@@ -16,6 +16,8 @@ ${OBJSDIR}/%.o: ${SRCSDIR}/%.cpp
 	mkdir -p ${dir ${OBJS}}
 	${CXX} ${CXXFLAGS} ${VERSION} ${INCLUDE} -c $< -o $@
 
+run: re
+	./${NAME}
 clean:
 	rm -rf ${OBJSDIR}
 fclean: clean
